# UNIVERSITY

./: .gitlab-ci.yml  ANALYTICS_DASHBOARD_COMPLETE.md  DOCKER_FIXES_SUMMARY.md  EXECUTE_NOW.md  FEATURES_IMPLEMENTED.md  FINAL_IMPLEMENTATION_REPORT.md  FIXES_AND_IMPROVEMENTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS_REPORT.md  IMPLEMENTATION_SUMMARY.md  MESSAGING_SYSTEM_COMPLETE.md  MIGRATION_AND_DEPLOYMENT_GUIDE.md  PERFORMANCE_AND_THEMING_IMPLEMENTED.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PROJECT_SUMMARY.md  QUICK_START_GUIDE.md  README.md  STOP_ALL_SERVERS.bat  UPDATED_IMPLEMENTATION_STATUS.md  University.slnx  docker-compose.prod.yml  docker-compose.yml  scrape_portal.py  test-rust-api.sh
.github/workflows/: ci-cd.yml
University.Application/: Class1.cs  University.Application.csproj
University.Domain/: Class1.cs
University.Domain/Common/: BaseEntity.cs
University.Domain/Entities/: Attendance.cs  ClassSchedule.cs  Course.cs  Department.cs  Enrollment.cs  Exam.cs  ExamResult.cs  FeePayment.cs  Program.cs  StaffMember.cs  Student.cs
University.Domain/Enums/: EmploymentStatus.cs  Gender.cs  StudentStatus.cs
University.Infrastructure/: Class1.cs  University.Infrastructure.csproj
University.Infrastructure/Data/: ApplicationDbContext.cs
University.Infrastructure/Identity/: ApplicationUser.cs
University.Infrastructure/Migrations/: 20260313230106_InitialCreate.Designer.cs  20260313230106_InitialCreate.cs  ApplicationDbContextModelSnapshot.cs
University.Web/: Program.cs  University.Web.csproj  appsettings.json
University.Web/Components/: App.razor  Routes.razor  _Imports.razor
University.Web/Properties/: launchSettings.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  celerybeat-schedule  pytest.ini  requirements.txt  setup.bat  setup.sh
backend/apps/: __init__.py
backend/config/: asgi.py  celery.py  system_settings.py  urls.py
config/: .env.example  .env.production  .env.production.example
docker-start/: CHANGES_SUMMARY.md  CREDENTIALS.md  DOCKER_SETUP_GUIDE.md  QUICK_START.md  README.md
documentation/: ADD_STUDENT_IMPLEMENTATION.md  ANALYSIS_QUICK_REFERENCE.md  CODE_TEMPLATES_AND_STARTERS.md  COMMAND_REFERENCE.md  COMPLETE_ANALYSIS_SUMMARY.md  COMPLETE_SETUP_GUIDE.md  COMPLETE_SYSTEM_REPORT.md  COMPLETE_SYSTEM_SUMMARY.md  COMPREHENSIVE_RBAC_MATRIX.md  COOKIE_FIX_FINAL.md  CRITICAL_ANALYSIS_2026-03-19.md  DATABASE_SEEDING_SUMMARY.md  DEPENDENCIES_AND_SECURITY_ANALYSIS.md  DOCKER_ANALYSIS_REPORT.md  DOCKER_COMMANDS.md  DOCKER_LIVE.md  DOCKER_QUICK_START.md  DOCKER_SETUP_COMPLETE.md  DOCKER_TESTING.md  DOCUMENTATION_INDEX.md  EBKUST_IMPLEMENTATION_PLAN.md  EBKUST_REDESIGN_PROGRESS.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SESSION_SUMMARY_2026-03-16.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  ISSUES_AND_FIXES_2026-03-19.md  LOGIN_FIX_SUMMARY.md  NAVIGATION_FEATURES.md  NEW_FEATURES_SUMMARY.md  NEXT_ACTION_PLAN.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_ANALYSIS.md  QUICK_START.md  RABBITMQ_NOTIFICATION_SETUP.md  RBAC_PERMISSIONS_MATRIX.md  README_COMPLETION.md  REDIRECT_FIX_AND_SUPERUSER.md  REMAINING_IMPLEMENTATION_GUIDE.md  (+12 more)
frontend/: .dockerignore  .eslintrc.json  Dockerfile  README.md  check-db-fixed.mjs  check-db.mjs  check-passwords.mjs  check-users.js  create-superuser.ts  dev.db  instrumentation.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  prisma.config.ts  tailwind.config.ts  test-all-credentials.mjs  test-api.js  test-apis.sh  test-login-simple.mjs  test-login.mjs
instructions/: README.md
rust/: .dockerignore  .env.example  Cargo.toml  Dockerfile.api  Dockerfile.workers  README.md
rust/api/: Cargo.toml
rust/api/src/: main.rs  state.rs
rust/api/src/routes/: courses.rs  exams.rs  mod.rs  students.rs
rust/shared/: Cargo.toml
rust/shared/src/: config.rs  db.rs  errors.rs  lib.rs  utils.rs
rust/shared/src/models/: common.rs  course.rs  exam.rs  mod.rs  student.rs
rust/workers/: Cargo.toml
rust/workers/src/: main.rs
rust/workers/src/consumers/: exam_results.rs  mod.rs  notifications.rs
scripts/: APPLY_DOCKER_FIXES.sh  START_ALL_SERVERS.bat  START_DOCKER.bat  START_DOCKER.ps1  START_LOCAL_DEV.bat  START_SERVERS.ps1  STOP_DOCKER.bat  backup-database.sh  configure-env.sh  deploy-development.bat  deploy-production.sh  provision-server.sh  restore-database.sh  stop-all.bat  test-docker-setup.bat  test-docker-setup.sh  verify-deployment.sh
(+377 files in other folders)
