# Rust Workspace for EBKUST University Management System
#
# This workspace implements a brownfield migration strategy alongside Django backend
#
# Architecture:
# - api/       → Axum HTTP API service (port 8081)
# - workers/   → RabbitMQ consumers for async tasks
# - shared/    → Shared domain models, database layer, utilities

[workspace]
members = ["api", "workers", "shared"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["EBKUST Development Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
futures = "0.3"

# HTTP Framework
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["timeout", "load-shed", "limit"] }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Message Queue
lapin = "2.5"

# Auth & Security
jsonwebtoken = "9.3"
argon2 = "0.5"
uuid = { version = "1.11", features = ["serde", "v4"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Validation
validator = { version = "0.19", features = ["derive"] }

# Date & Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
rust_decimal = { version = "1.37", features = ["serde-with-float"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
