[package]
name = "api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace crates
shared = { path = "../shared" }

# Async runtime
tokio.workspace = true

# HTTP Framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true

# Auth
jsonwebtoken.workspace = true
uuid.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Validation
validator.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"
