[package]
name = "workers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace crates
shared = { path = "../shared" }

# Async runtime
tokio.workspace = true
futures.workspace = true

# Message Queue
lapin.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true

[[bin]]
name = "workers"
path = "src/main.rs"
